# horiba-python-sdk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  icl_command_status.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  release-on-tag.yml
docker/: README.md
docs/: ICL commands  ICL json format.json  Makefile  icl_api.md
docs/source/: conf.py  examples.rst  gain_speed.rst  icl_api.md  index.rst  usage.rst
docs/source/images/: device_manager_usage.puml
examples/: ccd_example.py  monochromator_example.py
examples/asynchronous_examples/: ccd_context_manager_example.py  ccd_example  ccd_example.py  center_scan.py  gain_speed_info.py  linear_spectra_stitch.py  monochromator_context_manager_example.py  monochromator_example.py  range_scan.py  spectra_stitch.py  trigger_setup.py
examples/synchronous_examples/: easy_ccd_example.py  sync_ccd_example.py  sync_monochromator_example.py
horiba_sdk/: __init__.py  example.py  logging_config.py
horiba_sdk/communication/: __init__.py  abstract_communicator.py  abstracts.py  command_builders.py  communication_exception.py  communicators.py  error_codes.py  messages.py  mocked_communicators.py  websocket_communicator.py
horiba_sdk/core/: acquisition_format.py  clean_count_mode.py  gain.py  linear_spectra_stitch.py  resolution.py  speed.py  timer_resolution.py  x_axis_conversion_type.py
horiba_sdk/devices/: __init__.py  abstract_device_discovery.py  abstract_device_manager.py  ccd_discovery.py  device_discovery.py  device_manager.py  easy_device_manager.py  fake_device_manager.py  fake_icl_server.py  monochromator_discovery.py
horiba_sdk/devices/fake_responses/: ccd.json  icl.json  monochromator.json
horiba_sdk/devices/single_devices/: __init__.py  abstract_device.py  ccd.py  easy_ccd.py  mono_api_test.py  monochromator.py
horiba_sdk/error_handler/: error_list.json
horiba_sdk/icl_error/: __init__.py  abstract_error.py  abstract_error_db.py  error_list.json  icl_error.py  icl_error_db.py
horiba_sdk/sync/communication/: __init__.py  abstract_communicator.py  test_client.py  websocket_communicator.py
horiba_sdk/sync/devices/: __init__.py  abstract_device_discovery.py  abstract_device_manager.py  device_discovery.py  device_manager.py  fake_device_manager.py  fake_icl_server.py  test_server.py
horiba_sdk/sync/devices/single_devices/: __init__.py  abstract_device.py  ccd.py  monochromator.py
horiba_sdk/utils/: __init__.py  utils.py
tests/: conftest.py
tests/test_communication/: test_messages.py  test_sync_webscoket_communicator.py  test_telnet_communicator.py  test_websocket_communicator.py
tests/test_core/: test_linear_spectra_stitch.py
tests/test_device_discovery/: test_ccd_discovery.py  test_monochromator_discovery.py
tests/test_device_manager/: test_device_manager.py  test_sync_device_manager.py
tests/test_example/: test_hello.py
tests/test_icl_error/: test_icl_error.py  test_icl_error_db.py
tests/test_logging/: test_logging.py  test_logging_config.py
tests/test_single_devices/: test_ccd.py  test_ccd_on_hw.py  test_monochromator.py  test_monochromator_on_hw.py  test_sync_ccd.py  test_sync_ccd_on_hw.py  test_sync_monochromator.py  test_sync_monochromator_on_hw.py
