# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "horiba-sdk"
version = "0.3.2"
description = "'horiba-sdk' is a package that provides source code for the development with Horiba devices"
readme = "README.md"
authors = ["ZühlkeEngineering <nikolaus.naredi-rainer@zuehlke.com>"]
license = "MIT"
repository = "https://github.com/ThatsTheEnd/horiba-python-sdk"
homepage = "https://github.com/ThatsTheEnd/horiba-python-sdk"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["Horiba", "SDK"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]



[tool.poetry.dependencies]
python = ">=3.9,<4"
loguru = "^0.7.2"
websockets = "^12.0"
overrides = "^7.4.0"
numericalunits = "^1.25"
psutil = "^5.9.7"
pint = "^0.23"

[tool.poetry.group.dev.dependencies]
click = "8.1.6"
bandit = "^1.7.1"
mypy = "^1.8.0"
mypy-extensions = "^1.0.0"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
pytest = "^7.4.2"
pyupgrade = "^2.29.1"
safety = "^2.3.5"
coverage = "^6.1.2"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
pytest-cov = "^4.0.0"
ruff = "^0.1.3"
pytest-asyncio = "^0.21.1"
git-changelog = "^2.4.0"
matplotlib = "^3.8.3"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autoapi = "^3.0.0"
tomli = "^2.0.1"
myst-parser = "^2.0.0"
docutils = "^0.20.1"
sphinx-book-theme = "^1.1.0"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  "ARG"
]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true
# Exclude the folder docs from mypy checks
exclude = "(docs|tests)/"
#exclude = "tests"
#disable_error_code = ["misc", "empty-body", "attr-defined"]
#allow_redefinition = false
#check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
markers = [
    "run_specific: mark a test to run only in specific scopes.",
]
asyncio_mode = "auto"

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "horiba-sdk"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
